Added base html page with basic styles.

--- a/game.html
+++ b/game.html
@@ -4,8 +4,24 @@
 
 <title>Conway's Game of Life</title> 
 
+<style type="text/css">
+   * { margin: 0px; padding: 0px; font: bold 10px Droid Sans, sans-serif; 
+       color: #1D1D1D; } 
+   body { background-color: black; }
+   h1 { font-size: 20px; display: block; } 
+   .header { text-align: center; }
+</style>
+
 </head> 
 <body> 
+   <div class="header">
+      <h1>Conway's Game of Life</h1>
+      <p> Brady Shutt &nbsp;&nbsp;&nbsp; Github </p>
+   </div>
+
+   <canvas id="board" width="100%"></canvas>
+
+   <script type="text/javascript" src="Conway.js"></script>
 
 </body> 
 </html>
