--- a/game.html
+++ b/game.html
@@ -5,10 +5,10 @@
 <title>Conway's Game of Life</title> 
 
 <style type="text/css">
-   * { margin: 0px; padding: 0px; font: bold 10px Droid Sans, sans-serif; 
+   * { margin: 0px; padding: 0px; font: bold 20px Droid Sans, sans-serif; 
        color: #4D4D4D; } 
    body { background-color: black; }
-   h1 { font-size: 20px; display: block; } 
+   h1 { font-size: 50px; display: block; } 
    .header { text-align: center; }
    #board { width: 100%; height: 100%; }
 </style>
@@ -17,7 +17,7 @@
 <body> 
    <div class="header" id="head">
       <h1>Conway's Game of Life</h1>
-      <p> Brady Shutt &nbsp;&nbsp;&nbsp; Github </p>
+      <p> <a href="http://www.github.com/bradyshutt/">Brady Shutt</a> &nbsp;&nbsp;&nbsp; <a href="https://github.com/bradyshutt/Conways-Game-of-Life-JS ">Github </a></p>
    </div>
 
    <!-- <canvas id="board" width=500 height=500></canvas> -->
