Added about link

--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 <body> 
    <div class="header" id="head">
       <h1>Conway's Game of Life</h1>
-      <p> <a href="http://www.github.com/bradyshutt/">Brady Shutt</a> &nbsp;&nbsp;&nbsp; <a href="https://github.com/bradyshutt/Conways-Game-of-Life-JS ">Github </a></p>
+      <p> <a href="http://www.github.com/bradyshutt/">Brady Shutt</a> &nbsp;&nbsp;&nbsp; <a href="https://github.com/bradyshutt/Conways-Game-of-Life-JS ">Github </a>&nbsp;&nbsp;&nbsp; <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">What is This?</a></p>
    </div>
 
    <!-- <canvas id="board" width=500 height=500></canvas> -->
