--- a/game.html
+++ b/game.html
@@ -23,9 +23,8 @@
    <!-- <canvas id="board" width=500 height=500></canvas> -->
    <canvas id="board"></canvas>
 
-   <!-- <script type="text/javascript" src="Cell.js"></script> -->
-   <script type="text/javascript" src="Board.js"></script>
-   <script type="text/javascript" src="conway.js"></script>
+   <script src="Board.js"></script>
+   <script src="conway.js"></script>
 
 </body> 
 </html>
